scrollbar fix

--- a/src/components/Screens/User/Registation/Registation.module.scss
+++ b/src/components/Screens/User/Registation/Registation.module.scss
@@ -46,6 +46,11 @@
         gap: 48px;
     }
 }
+
+.ScrollWrapper {
+    height: 100%;
+}
+
 @media (max-height: 760px) {
     .registration {
         &Form {
